tests/grammar/snapshots/r#mod__grammar__alpha034__array-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"[\")"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Array(
                                    [],
                                ),
                                0..1,
                            ),
                        ),
                        0..1,
                    ),
                ),
                0..1,
            ),
        ],
    ),
    [
        Simple {
            span: 1..2,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        "]",
                    ),
                ),
            },
            found: None,
            label: Some(
                "expression",
            ),
        },
    ],
)
