tests/grammar/snapshots/r#mod__grammar__alpha034__array-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"[1\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Array(
                                    [
                                        (
                                            Number(
                                                (
                                                    1.0,
                                                    1..2,
                                                ),
                                            ),
                                            1..2,
                                        ),
                                    ],
                                ),
                                0..2,
                            ),
                        ),
                        0..2,
                    ),
                ),
                0..2,
            ),
        ],
    ),
    [
        found end of input at 0..2 expected '"."', '";"', '"as"', '"is"', '"*"', '"/"', '"%"', '"+"', '"-"', '">="', '">"', '"<="', '"<"', '"=="', '"!="', '"and"', '"or"', '".."', '"then"', '","', or '"]"',
    ],
)
