tests/grammar/snapshots/r#mod__grammar__alpha034__array-8.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"[1, 2\")"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Array(
                                    [
                                        (
                                            Number(
                                                (
                                                    1.0,
                                                    1..2,
                                                ),
                                            ),
                                            1..2,
                                        ),
                                        (
                                            Number(
                                                (
                                                    2.0,
                                                    4..5,
                                                ),
                                            ),
                                            4..5,
                                        ),
                                    ],
                                ),
                                0..5,
                            ),
                        ),
                        0..5,
                    ),
                ),
                0..5,
            ),
        ],
    ),
    [
        Simple {
            span: 5..6,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        "]",
                    ),
                ),
            },
            found: None,
            label: None,
        },
    ],
)
