tests/grammar/snapshots/r#mod__grammar__alpha034__array.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"[1, 2, 3]\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Expression(
                    Array(
                        (),
                        [
                            Number(
                                1.0,
                            ),
                            Number(
                                2.0,
                            ),
                            Number(
                                3.0,
                            ),
                        ],
                        (),
                    ),
                ),
                None,
            ),
        ),
    ],
)
