tests/grammar/snapshots/r#mod__grammar__alpha034__bool.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"true\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Expression(
                    Boolean(
                        True,
                    ),
                ),
                None,
            ),
        ),
    ],
)
